Setup local file storage and alternate domain

--- a/roles/phabricator/templates/nginx.site.conf.j2
+++ b/roles/phabricator/templates/nginx.site.conf.j2
@@ -1,5 +1,5 @@
 server {
-  server_name phabricator.dev;
+  server_name phabricator.dev phabfiles.dev;
   root        /home/phd/phabricator/webroot;
 
   location / {
